# handle-charsets

./: .gitignore  README.md  action.sh  action.yml  handle.py  pyproject.toml  requirements-dev.txt  test_handle.py
.github/workflows/: lint.yml
docs/: gitattributes.md
